[gd_scene load_steps=5 format=3 uid="uid://dno7yl347ne2j"]

[ext_resource type="Script" path="res://entities/sheep/dark_sheep.gd" id="1_og1qv"]
[ext_resource type="Script" path="res://entities/sheep/sheep_color.gd" id="2_0j6g2"]
[ext_resource type="PackedScene" uid="uid://croqabxpl1bsp" path="res://entities/models/sheep_anim.tscn" id="3_u7gfd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5w0s4"]
radius = 1.0

[node name="DarkSheep" type="CharacterBody3D" groups=["pickable", "sheep"]]
script = ExtResource("1_og1qv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_5w0s4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.1
avoidance_enabled = true
height = 5.0
radius = 2.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SheepColor" type="Node3D" parent="."]
script = ExtResource("2_0j6g2")
color = "чёрный"

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_5w0s4")

[node name="SheepModel" parent="." instance=ExtResource("3_u7gfd")]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07403, 0)

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
